[package]
name = "redis-shake-rs"
version = "0.1.0"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
crc64 = "1.0.0"
redis = "0.16.0"
os_pipe = "0.9.1"
net2 = "0.2.34"