[package]
name = "redis-shake-rs"
version = "0.1.0"
authors = ["jiuker <guozhi.li@dmall.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
crc64 = "1.0.0"
redis = "0.16.0"
os_pipe = "0.9.1"
net2 = "0.2.34"
time = "0.2.16"
async-std = "1.6.2"
futures-util = "0.3.5"
async-pipe = "0.1.3"
tokio="0.2.21"